unpackaged/main/default/objects/DOF__c/DOF__c.object-meta.xml
<CustomObject>
    <description>Used for recorrding orders added by the Hub Mobile App</description>
    <label>DOF</label>
    <nameField>
        <displayFormat>DOF-{000000}</displayFormat>
        <label>DOF Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOFs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>