unpackaged/main/default/objects/DOF__c/fields/Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Email__c</fullName>
    <inlineHelpText>Recording an alternative email where required for the mobile app.</inlineHelpText>
    <label>Alternative Email</label>
    <type>TextArea</type>
</CustomField>