unpackaged/main/default/objects/DOF__c/fields/Bio_Email_To_Send_To__c.field-meta.xml
<CustomField>
    <fullName>Bio_Email_To_Send_To__c</fullName>
    <label>Biocomposites email address for DOF</label>
    <type>Email</type>
</CustomField>