unpackaged/main/default/objects/DOF__c/fields/Biocomposites_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Biocomposites_Company_Name__c</fullName>
    <formula>IF( Bio_Email_To_Send_To__c = &quot;usorders@biocomposites.com&quot;,
&quot;Biocomposites Inc.&quot;,
&quot;Biocomposites Ltd&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biocomposites Company Name</label>
    <type>Text</type>
</CustomField>