unpackaged/main/default/objects/DOF__c/fields/Biocomposites_Company_Name_For_Email_Foo__c.field-meta.xml
<CustomField>
    <fullName>Biocomposites_Company_Name_For_Email_Foo__c</fullName>
    <formula>IF( Bio_Email_To_Send_To__c = &quot;usorders@biocomposites.com&quot;,
&quot;700 Military Cutoff Road, Suite 320,&quot;&amp;BR()&amp;&quot;Wilmington,NC 28405, USA&quot;,
&quot;Keele Science Park, Keele,&quot;&amp;BR()&amp;&quot;Staffordshire, England ST5 5NL&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biocomposites Company Name For Email Foo</label>
    <type>Text</type>
</CustomField>