unpackaged/main/default/objects/DOF__c/fields/Created_By_Email__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Email__c</fullName>
    <inlineHelpText>This is the email address of the user this was created by</inlineHelpText>
    <label>App User Email</label>
    <type>Email</type>
</CustomField>