unpackaged/main/default/objects/DOF__c/fields/Date_Entered__c.field-meta.xml
<CustomField>
    <fullName>Date_Entered__c</fullName>
    <description>The date/time the record was submitted and saved on the device</description>
    <inlineHelpText>The date/time the record was submitted and saved on the device</inlineHelpText>
    <label>Date Entered</label>
    <type>DateTime</type>
</CustomField>