unpackaged/main/default/objects/DOF__c/fields/Date_in_text__c.field-meta.xml
<CustomField>
    <fullName>Date_in_text__c</fullName>
    <formula>CASE(MONTH(DATEVALUE(Date_Entered__c)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)&amp; &quot; &quot; &amp;
TEXT(DAY(DATEVALUE(Date_Entered__c)))
&amp; &quot;, &quot;&amp; TEXT(YEAR(DATEVALUE( Date_Entered__c ) ))</formula>
    <label>Date in text</label>
    <type>Text</type>
</CustomField>