unpackaged/main/default/objects/DOF__c/fields/declarative_rollup_count__c.field-meta.xml
<CustomField>
    <fullName>declarative_rollup_count__c</fullName>
    <label>declarative rollup count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>