unpackaged/main/default/objects/DOF__c/fields/Dist_Email__c.field-meta.xml
<CustomField>
    <fullName>Dist_Email__c</fullName>
    <inlineHelpText>this field is popukated with the the emal address from the distributor **When the distributor lookup is populated**</inlineHelpText>
    <label>Distributor email address for DOF</label>
    <type>Email</type>
</CustomField>