unpackaged/main/default/objects/DOF__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The distributor of the rep that recorded the order.</inlineHelpText>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DOFs</relationshipLabel>
    <relationshipName>DOFs</relationshipName>
    <type>Lookup</type>
</CustomField>