unpackaged/main/default/objects/DOF__c/fields/Distributor_Name__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Name__c</fullName>
    <formula>Owner:User.CompanyName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Name</label>
    <type>Text</type>
</CustomField>