unpackaged/main/default/objects/DOF__c/fields/Distributor_Territory__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Territory__c</fullName>
    <formula>TEXT ( Distributor__r.Sales_Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Territory</label>
    <type>Text</type>
</CustomField>