unpackaged/main/default/objects/DOF__c/fields/Distributor_Type__c.field-meta.xml
<CustomField>
    <fullName>Distributor_Type__c</fullName>
    <formula>TEXT(Distributor__r.Distributor_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Distributor Type</label>
    <type>Text</type>
</CustomField>