unpackaged/main/default/objects/DOF__c/fields/DOF_Attachment_Filename__c.field-meta.xml
<CustomField>
    <fullName>DOF_Attachment_Filename__c</fullName>
    <formula>&quot;Biocomposites Order Form &quot;&amp; From_Field_for_Email__c &amp;&quot;. Ref-&quot;&amp; RIGHT(Name, 6)</formula>
    <label>DOF Attachment Filename</label>
    <type>Text</type>
</CustomField>