unpackaged/main/default/objects/DOF__c/fields/DOF_Contact_Us_For_Email__c.field-meta.xml
<CustomField>
    <fullName>DOF_Contact_Us_For_Email__c</fullName>
    <formula>IF( Bio_Email_To_Send_To__c = &quot;usorders@biocomposites.com&quot;, 
&quot;Tel: 910-350-8015&quot;&amp;BR()&amp;&quot;email: infous@biocomposites.com&quot;, 
&quot;Tel: +44 (0) 1782 338580&quot;&amp;BR()&amp;&quot;email: info@biocomposites.com&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOF Contact Us For Email</label>
    <type>Text</type>
</CustomField>