unpackaged/main/default/objects/DOF__c/fields/DOF_Item_Count__c.field-meta.xml
<CustomField>
    <fullName>DOF_Item_Count__c</fullName>
    <inlineHelpText>A count of the items added to the DOF on the mobile app to ensure the order is not released unless it matches order line item counts.</inlineHelpText>
    <label>DOF Item Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>