unpackaged/main/default/objects/DOF__c/fields/Dof_items_match__c.field-meta.xml
<CustomField>
    <fullName>Dof_items_match__c</fullName>
    <formula>IF(  declarative_rollup_count__c  =  DOF_Item_Count__c, TRUE, FALSE)</formula>
    <label>Dof items match</label>
    <type>Checkbox</type>
</CustomField>