unpackaged/main/default/objects/DOF__c/fields/DOF_Items_Revenue_Total__c.field-meta.xml
<CustomField>
    <fullName>DOF_Items_Revenue_Total__c</fullName>
    <label>DOF Items Revenue Total</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>