unpackaged/main/default/objects/DOF__c/fields/DOF_Line_Items_Synced__c.field-meta.xml
<CustomField>
    <fullName>DOF_Line_Items_Synced__c</fullName>
    <defaultValue>0</defaultValue>
    <label>DOF Line Items Synced</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>