unpackaged/main/default/objects/DOF__c/fields/DOF_Rep_Block__c.field-meta.xml
<CustomField>
    <fullName>DOF_Rep_Block__c</fullName>
    <description>IF( Bio_Email_To_Send_To__c = &quot;usorders@biocomposites.com&quot;,
Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName
&amp;BR()&amp;
job_title_for_email__c 
&amp;BR()&amp;
Distributor_Name__c 
&amp;BR()&amp;
Email_for_address_block__c 
&amp;BR()&amp;
Owner:User.Phone,
NULL
)</description>
    <formula>Owner:User.FirstName&amp;&quot; &quot;&amp;Owner:User.LastName
&amp;BR()&amp;
job_title_for_email__c 
&amp;BR()&amp;
Distributor_Name__c 
&amp;BR()&amp;
Email_for_address_block__c 
&amp;BR()&amp;
Owner:User.Phone</formula>
    <label>DOF Rep Block</label>
    <type>Text</type>
</CustomField>