unpackaged/main/default/objects/DOF__c/fields/DOF_Rep_Title__c.field-meta.xml
<CustomField>
    <fullName>DOF_Rep_Title__c</fullName>
    <description>IF( Bio_Email_To_Send_To__c = &quot;usorders@biocomposites.com&quot;,
&quot;Distributor Representative &quot;,
NULL
)</description>
    <formula>&quot;Distributor Representative &quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOF Rep Title</label>
    <type>Text</type>
</CustomField>