unpackaged/main/default/objects/DOF__c/fields/DOF_Submith_Purchase_Order_Add_For_Email__c.field-meta.xml
<CustomField>
    <fullName>DOF_Submith_Purchase_Order_Add_For_Email__c</fullName>
    <formula>IF( Bio_Email_To_Send_To__c = &quot;usorders@biocomposites.com&quot;, 
&quot;Fax: 910-350-8072&quot;&amp;br()&amp;&quot;email: USorders@biocomposites.com&quot;, 
&quot;Fax: +44 (0) 1782 338599&quot;&amp;br()&amp;&quot;email: orders@biocomposites.com&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DOF Submith Purchase Order Add For Email</label>
    <type>Text</type>
</CustomField>