unpackaged/main/default/objects/DOF__c/fields/Email_for_address_block__c.field-meta.xml
<CustomField>
    <fullName>Email_for_address_block__c</fullName>
    <formula>IF(ISBLANK(Owner:User.ContactId),  Owner:User.Email  ,  Owner:User.Contact.Email )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email for address block</label>
    <type>Text</type>
</CustomField>