unpackaged/main/default/objects/DOF__c/fields/Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent__c</fullName>
    <inlineHelpText>Timestamp for email sent via DOF Trigger</inlineHelpText>
    <label>Email Sent</label>
    <type>DateTime</type>
</CustomField>