unpackaged/main/default/objects/DOF__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <inlineHelpText>First Name of the Hospital Representative</inlineHelpText>
    <label>First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>