unpackaged/main/default/objects/DOF__c/fields/From_Field_for_Email__c.field-meta.xml
<CustomField>
    <fullName>From_Field_for_Email__c</fullName>
    <formula>IF( ISBLANK( Distributor__c ) , NULL, &quot;from &quot;&amp; Distributor__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>From Field for Email</label>
    <type>Text</type>
</CustomField>