unpackaged/main/default/objects/DOF__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Hospital the Surgeon requires the product for.</inlineHelpText>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DOFs (Hospital)</relationshipLabel>
    <relationshipName>DOFs1</relationshipName>
    <type>Lookup</type>
</CustomField>