unpackaged/main/default/objects/DOF__c/fields/Hospital_Address_For_DOF_Email__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Address_For_DOF_Email__c</fullName>
    <formula>IF( ISBLANK( Hospital__c ) ,  Hospital_Street__c ,  
Hospital__r.BillingStreet &amp; BR()&amp;
Hospital__r.BillingCity &amp; BR()&amp;
Hospital__r.BillingState &amp; BR()&amp;
Hospital__r.BillingPostalCode &amp; BR()&amp;
Hospital__r.BillingCountry  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Address For DOF Email</label>
    <type>Text</type>
</CustomField>