unpackaged/main/default/objects/DOF__c/fields/Hospital_City__c.field-meta.xml
<CustomField>
    <fullName>Hospital_City__c</fullName>
    <inlineHelpText>If there is a new Hospital this is the City</inlineHelpText>
    <label>Hospital City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>