unpackaged/main/default/objects/DOF__c/fields/Hospital_Code__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Code__c</fullName>
    <formula>Hospital__r.Customer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Code</label>
    <type>Text</type>
</CustomField>