unpackaged/main/default/objects/DOF__c/fields/Hospital_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Email_Address__c</fullName>
    <inlineHelpText>The hospital email address. 
if the email address is stated on this record then it will be that 
otherwise it takes the address from the hospital record
If the field is &quot;do not send&quot; then this field will be blank</inlineHelpText>
    <label>Hospital email for order conf.</label>
    <type>Email</type>
</CustomField>