unpackaged/main/default/objects/DOF__c/fields/Hospital_for_DOF_email__c.field-meta.xml
<CustomField>
    <fullName>Hospital_for_DOF_email__c</fullName>
    <formula>IF(ISBLANK( Hospital__c ) ,  Hospital_Name__c ,  Hospital__r.Name )</formula>
    <label>Hospital for DOF email</label>
    <type>Text</type>
</CustomField>