unpackaged/main/default/objects/DOF__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <inlineHelpText>If there is a new Hospital this is the name</inlineHelpText>
    <label>Hospital Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>