unpackaged/main/default/objects/DOF__c/fields/Hospital_Name_For_Reorting__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name_For_Reorting__c</fullName>
    <formula>IF(ISBLANK( Hospital_Name__c  ) ,  Hospital__r.Name ,  Hospital_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Name For Reorting</label>
    <type>Text</type>
</CustomField>