unpackaged/main/default/objects/DOF__c/fields/Hospital_Notifiaction__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Notifiaction__c</fullName>
    <formula>CASE( Send_Confirmation__c , 
&quot;Do not send&quot;, &quot;Do not send&quot;, 
&quot;Send to address on file&quot;, &quot;Send to address on file: &quot;&amp; Hospital__r.Email_Address_For_Order_Form__c ,
&quot;Send to alternative address&quot;, &quot;Send to alternative address: &quot; &amp;  Alternative_Email__c ,
null)</formula>
    <label>Hospital Notifiaction</label>
    <type>Text</type>
</CustomField>