unpackaged/main/default/objects/DOF__c/fields/Hospital_Rep__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Rep__c</fullName>
    <formula>First_Name__c &amp;&quot; &quot;&amp; Last_Name__c</formula>
    <label>Hospital Rep for email</label>
    <type>Text</type>
</CustomField>