unpackaged/main/default/objects/DOF__c/fields/Hospital_State__c.field-meta.xml
<CustomField>
    <fullName>Hospital_State__c</fullName>
    <inlineHelpText>If there is a new Hospital this is the State</inlineHelpText>
    <label>Hospital State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>