unpackaged/main/default/objects/DOF__c/fields/Hospital_Street__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Street__c</fullName>
    <inlineHelpText>If there is a new Hospital this is the full address.</inlineHelpText>
    <label>Hospital Address</label>
    <type>TextArea</type>
</CustomField>