unpackaged/main/default/objects/DOF__c/fields/Hospital_Territory__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Territory__c</fullName>
    <formula>TEXT( Hospital__r.Sales_Region__c )</formula>
    <label>Hospital Territory</label>
    <type>Text</type>
</CustomField>