unpackaged/main/default/objects/DOF__c/fields/Hospital_Text_Id__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Text_Id__c</fullName>
    <description>Used only by code to temporarily hold the Hospital Id</description>
    <inlineHelpText>Used only by code to temporarily hold the Hospital Id</inlineHelpText>
    <label>Hospital Text Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>