unpackaged/main/default/objects/DOF__c/fields/Hospital_ZIP_Postocde__c.field-meta.xml
<CustomField>
    <fullName>Hospital_ZIP_Postocde__c</fullName>
    <inlineHelpText>If there is a new Hospital this is the ZIP/Postcode</inlineHelpText>
    <label>Hospital ZIP/Postocde</label>
    <length>20</length>
    <type>Text</type>
</CustomField>