unpackaged/main/default/objects/DOF__c/fields/job_title_for_email__c.field-meta.xml
<CustomField>
    <fullName>job_title_for_email__c</fullName>
    <formula>IF( ISBLANK( Owner:User.ContactId ) , Owner:User.Title , Owner:User.Contact.Title )</formula>
    <label>job title for email</label>
    <type>Text</type>
</CustomField>