unpackaged/main/default/objects/DOF__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <inlineHelpText>Last Name of the Hospital Representative</inlineHelpText>
    <label>Last Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>