unpackaged/main/default/objects/DOF__c/fields/MC_Proxy_ID__c.field-meta.xml
<CustomField>
    <fullName>MC_Proxy_ID__c</fullName>
    <inlineHelpText>Used for MobileCaddy AppExchange</inlineHelpText>
    <label>MC_Proxy_ID</label>
    <type>TextArea</type>
</CustomField>