unpackaged/main/default/objects/DOF__c/fields/MC_Restrict_001__c.field-meta.xml
<CustomField>
    <fullName>MC_Restrict_001__c</fullName>
    <formula>IF ( 
TODAY() &lt; (DATEVALUE(CreatedDate)+186), 
TRUE, 
FALSE 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC_Restrict_001</label>
    <type>Checkbox</type>
</CustomField>