unpackaged/main/default/objects/DOF__c/fields/Number_of_DOF_items_expected__c.field-meta.xml
<CustomField>
    <fullName>Number_of_DOF_items_expected__c</fullName>
    <label>Number of DOF items expected</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>