unpackaged/main/default/objects/DOF__c/fields/Owner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Owner_Phone__c</fullName>
    <formula>Owner:User.Phone</formula>
    <inlineHelpText>from the phone number field from the &quot;owner&quot; (user) of this record</inlineHelpText>
    <label>Owner Phone</label>
    <type>Text</type>
</CustomField>