unpackaged/main/default/objects/DOF__c/fields/PO_Number__c.field-meta.xml
<CustomField>
    <fullName>PO_Number__c</fullName>
    <inlineHelpText>Shows the Purchase Order number</inlineHelpText>
    <label>PO Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>