unpackaged/main/default/objects/DOF__c/fields/Procedure_Comments__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Comments__c</fullName>
    <inlineHelpText>Note any comments about the procedure</inlineHelpText>
    <label>Procedure Comments</label>
    <type>TextArea</type>
</CustomField>