unpackaged/main/default/objects/DOF__c/fields/Procedure_Date__c.field-meta.xml
<CustomField>
    <fullName>Procedure_Date__c</fullName>
    <inlineHelpText>Shows the date of the procedure</inlineHelpText>
    <label>Procedure Date</label>
    <type>Date</type>
</CustomField>