unpackaged/main/default/objects/DOF__c/fields/Related_Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Hospital_Name__c</fullName>
    <formula>Hospital__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Hospital Name</label>
    <type>Text</type>
</CustomField>