unpackaged/main/default/objects/DOF__c/fields/Related_Surgeon_Name__c.field-meta.xml
<CustomField>
    <fullName>Related_Surgeon_Name__c</fullName>
    <formula>IF( NOT ISNULL(Surgeon__c),
    TEXT(Surgeon__r.Salutation) + &quot; &quot; + Surgeon__r.FirstName + &quot; &quot; + Surgeon__r.LastName,
    NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Surgeon Name</label>
    <type>Text</type>
</CustomField>