unpackaged/main/default/objects/DOF__c/fields/Replace_Stock_Details__c.field-meta.xml
<CustomField>
    <fullName>Replace_Stock_Details__c</fullName>
    <inlineHelpText>If stock is to be replaced note where to.</inlineHelpText>
    <label>Replace Stock Details</label>
    <type>TextArea</type>
</CustomField>