unpackaged/main/default/objects/DOF__c/fields/Send_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Send_Confirmation__c</fullName>
    <inlineHelpText>Indicates whether to send a confirmation email. If no alternative address is provided use the main email address</inlineHelpText>
    <label>Send Confirmation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not send</fullName>
            </value>
            <value>
                <fullName>Send to address on file</fullName>
            </value>
            <value>
                <fullName>Send to alternative address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>