unpackaged/main/default/objects/DOF__c/fields/Send_Process_Has_Completed__c.field-meta.xml
<CustomField>
    <fullName>Send_Process_Has_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Process Has Completed</label>
    <type>Checkbox</type>
</CustomField>