unpackaged/main/default/objects/DOF__c/fields/Sign__c.field-meta.xml
<CustomField>
    <fullName>Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sign</label>
    <type>Checkbox</type>
</CustomField>