unpackaged/main/default/objects/DOF__c/fields/Signature_Capture__c.field-meta.xml
<CustomField>
    <fullName>Signature_Capture__c</fullName>
    <inlineHelpText>Used to store the encoded signature as recorded on the mobile app.</inlineHelpText>
    <label>Signature Capture</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>