unpackaged/main/default/objects/DOF__c/fields/Signature_Capture_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Signature_Capture_Document_Id__c</fullName>
    <description>Id of the document record that holds the signature which is then used to display the signature in visualforce email template</description>
    <label>Signature Capture Document Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>