unpackaged/main/default/objects/DOF__c/fields/Stock_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Stock_Instructions__c</fullName>
    <inlineHelpText>Indicates whether to replace the stock that has been sold</inlineHelpText>
    <label>Stock Instructions</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Don&#39;t replace stock</fullName>
            </value>
            <value>
                <fullName>Replace stock to</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>