unpackaged/main/default/objects/DOF__c/fields/Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Surgeon that requested the Order</inlineHelpText>
    <label>Surgeon</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DOFs</relationshipLabel>
    <relationshipName>DOFs</relationshipName>
    <type>Lookup</type>
</CustomField>