unpackaged/main/default/objects/DOF__c/fields/Surgeon_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_First_Name__c</fullName>
    <inlineHelpText>If there is a new Surgeon this is where they are recorded.</inlineHelpText>
    <label>Surgeon First Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>