unpackaged/main/default/objects/DOF__c/fields/Surgeon_For_Email__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_For_Email__c</fullName>
    <formula>IF( ISBLANK( Surgeon__c ) ,  Surgeon_First_Name__c &amp;&quot; &quot;&amp; Surgeon_Last_Name__c , Surgeon__r.FirstName &amp;&quot; &quot;&amp;Surgeon__r.LastName)</formula>
    <inlineHelpText>This field appears in the order form emails. 
If the surgeon field is linked it will show the name of the surgeon.
If this field is blank it will show the surgeon first and last name entered on this record</inlineHelpText>
    <label>Surgeon (For Email)</label>
    <type>Text</type>
</CustomField>