unpackaged/main/default/objects/DOF__c/fields/Surgeon_Text_Id__c.field-meta.xml
<CustomField>
    <fullName>Surgeon_Text_Id__c</fullName>
    <description>Used by code to temporarily hold the Surgeon Id.</description>
    <inlineHelpText>Used by code to temporarily hold the Surgeon Id.</inlineHelpText>
    <label>Surgeon Text Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>