unpackaged/main/default/objects/DOF__c/fields/Type_of_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Procedure__c</fullName>
    <label>Type of Procedure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Total joint reconstruction</fullName>
            </value>
            <value>
                <fullName>Trauma</fullName>
            </value>
            <value>
                <fullName>Foot &amp; ankle</fullName>
            </value>
            <value>
                <fullName>Spine</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>