unpackaged/main/default/objects/DOF__c/fields/Type_Of_User__c.field-meta.xml
<CustomField>
    <fullName>Type_Of_User__c</fullName>
    <formula>IF(ISBLANK(Owner:User.ContactId), &quot;Standard User&quot; , &quot;Community User&quot;)</formula>
    <label>Type Of User</label>
    <type>Text</type>
</CustomField>