unpackaged/main/default/objects/DOF__c/fields/Username_EmailTemplate__c.field-meta.xml
<CustomField>
    <fullName>Username_EmailTemplate__c</fullName>
    <formula>CreatedBy.FirstName+&#39; &#39;+ CreatedBy.LastName</formula>
    <label>Username EmailTemplate</label>
    <type>Text</type>
</CustomField>