unpackaged/main/default/objects/DOF__c/recordTypes/DOF.recordType-meta.xml
<RecordType>
    <fullName>DOF</fullName>
    <active>true</active>
    <label>DOF</label>
</RecordType>