unpackaged/main/default/objects/DOF__c/recordTypes/Stock_Take.recordType-meta.xml
<RecordType>
    <fullName>Stock_Take</fullName>
    <active>true</active>
    <label>Stock Take</label>
</RecordType>