unpackaged/main/default/objects/DOF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hospital__c</columns>
    <columns>Surgeon__c</columns>
    <columns>Distributor__c</columns>
    <columns>DOF_Item_Count__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Dof_items_match__c</columns>
    <columns>Send_Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Type_of_Procedure__c</columns>
    <columns>Send_Confirmation__c</columns>
    <columns>Alternative_Email__c</columns>
    <columns>Hospital_Email__c</columns>
    <columns>Date_Entered__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>